Format routes ts and swagger json
